# Smuuki

./: CMakeLists.txt  README.md  main.cpp  smuuki.pro  sql.qrc
forms/DatabasePasswordDialog/: PasswordDialog.ui
forms/GroupsTab/: AddGroupForm.ui  EditGroupForm.ui  GroupsList.ui  GroupsListFilters.ui  GroupsTab.ui
forms/InvoiceTab/: AddInvoiceForm.ui  AddInvoiceFormDialog.ui  AddInvoiceFormWrapper.ui  EditInvoiceForm.ui  InvoiceList.ui  InvoicesListFilters.ui  InvoicesTab.ui
forms/MainWindow/: MainWindow.ui  OutstandingPayments.ui
forms/Settings/: Settings.ui
forms/StudentsTab/: AddStudentForm.ui  EditStudentForm.ui  StudentList.ui  StudentListFilters.ui  StudentTab.ui
helpers/Dialog/: Dialog.cpp  Dialog.h
libs/AddGroupForm/: AddGroupForm.cpp  AddGroupForm.h
libs/AddInvoiceForm/: AddInvoiceForm.cpp  AddInvoiceForm.h
libs/AddStudentForm/: AddStudentForm.cpp  AddStudentForm.h
libs/DatabasePasswordDialog/: DatabasePasswordDialog.cpp  DatabasePasswordDialog.h
libs/EditGroupForm/: EditGroupForm.h  EditStudentForm.cpp
libs/EditInvoiceForm/: EditInvoiceForm.cpp  EditInvoiceForm.h
libs/EditStudentForm/: EditStudentForm.cpp  EditStudentForm.h
libs/GroupsList/: FilterModel.cpp  FilterModel.h  FiltersDialog.cpp  FiltersDialog.h  GroupList.cpp  GroupList.h
libs/GroupsTab/: GroupsTab.cpp  GroupsTab.h
libs/InvoiceTab/: InvoicesTab.cpp  InvoicesTab.h
libs/InvoicesList/: FilterModelInvoice.cpp  FilterModelInvoice.h  FiltersDialogInvoice.cpp  FiltersDialogInvoice.h  InvoicesList.cpp  InvoicesList.h
libs/MainWindow/: MainWindow.cpp  MainWindow.h
libs/OutstandingPayments/: FilterModelOutstandingPayments.cpp  FilterModelOutstandingPayments.h  OutstandingPayments.cpp  OutstandingPayments.h
libs/Settings/: Settings.cpp  Settings.h
libs/StudentsList/: FilterModelStudent.cpp  FilterModelStudent.h  FiltersDialogStudent.cpp  FiltersDialogStudent.h  StudentList.cpp  StudentList.h
libs/StudentsTab/: StudentsTab.cpp  StudentsTab.h
models/Group/: Group.cpp  Group.h  GroupTable.sql
models/Invoice/: Invoice.cpp  Invoice.h  InvoiceTable.sql
models/Student/: Student.cpp  Student.h  StudentTable.sql
translations/: smuuki_EN.qm  smuuki_EN.ts  smuuki_PL.qm  smuuki_PL.ts
